--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "paytring-nodejs",
   "type": "module",
-  "version": "1.1.0",
-  "description": "paytring node js sdk",
+  "version": "1.2.0",
+  "description": "Paytring node.js sdk",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
